--- a/orocommerce/charts/web/templates/ingress.yaml
+++ b/orocommerce/charts/web/templates/ingress.yaml
@@ -1,43 +1,37 @@
-{{/*{{- if .Values.ingress.enabled -}}*/}}
-{{/*apiVersion: networking.k8s.io/v1*/}}
-{{/*kind: Ingress*/}}
-{{/*metadata:*/}}
-{{/*  name: {{ include "web.fullname" . }}*/}}
-{{/*  labels:*/}}
-{{/*    {{- include "web.labels" . | nindent 4 }}*/}}
-{{/*  {{- with .Values.ingress.annotations }}*/}}
-{{/*  annotations:*/}}
-{{/*    {{- toYaml . | nindent 4 }}*/}}
-{{/*  {{- end }}*/}}
-{{/*spec:*/}}
-{{/*  {{- with .Values.ingress.className }}*/}}
-{{/*  ingressClassName: {{ . }}*/}}
-{{/*  {{- end }}*/}}
-{{/*  {{- if .Values.ingress.tls }}*/}}
-{{/*  tls:*/}}
-{{/*    {{- range .Values.ingress.tls }}*/}}
-{{/*    - hosts:*/}}
-{{/*        {{- range .hosts }}*/}}
-{{/*        - {{ . | quote }}*/}}
-{{/*        {{- end }}*/}}
-{{/*      secretName: {{ .secretName }}*/}}
-{{/*    {{- end }}*/}}
-{{/*  {{- end }}*/}}
-{{/*  rules:*/}}
-{{/*    {{- range .Values.ingress.hosts }}*/}}
-{{/*    - host: {{ .host | quote }}*/}}
-{{/*      http:*/}}
-{{/*        paths:*/}}
-{{/*          {{- range .paths }}*/}}
-{{/*          - path: {{ .path }}*/}}
-{{/*            {{- with .pathType }}*/}}
-{{/*            pathType: {{ . }}*/}}
-{{/*            {{- end }}*/}}
-{{/*            backend:*/}}
-{{/*              service:*/}}
-{{/*                name: {{ include "web.fullname" $ }}*/}}
-{{/*                port:*/}}
-{{/*                  number: {{ $.Values.service.port }}*/}}
-{{/*          {{- end }}*/}}
-{{/*    {{- end }}*/}}
-{{/*{{- end }}*/}}
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: {{ include "web.fullname" . }}-ingress
+  labels:
+    {{- include "web.labels" . | nindent 4 }}
+  annotations:
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/hsts: "true"
+    nginx.ingress.kubernetes.io/hsts-max-age: "31536000"
+    nginx.ingress.kubernetes.io/hsts-include-subdomains: "true"
+    nginx.ingress.kubernetes.io/hsts-preload: "true"
+    # Configuration pour OroCommerce
+    nginx.ingress.kubernetes.io/proxy-body-size: "512m"
+    nginx.ingress.kubernetes.io/proxy-connect-timeout: "180"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "180"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
+    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
+    nginx.ingress.kubernetes.io/proxy-buffers-number: "32"
+spec:
+  ingressClassName: nginx
+  tls:
+    - hosts:
+        - oro.demo
+      secretName: oro-demo-tls
+  rules:
+    - host: oro.demo
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: {{ include "web.fullname" . }}
+                port:
+                  number: 80
