--- a/orocommerce/charts/web/templates/service.yaml
+++ b/orocommerce/charts/web/templates/service.yaml
@@ -2,14 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "web.fullname" . }}
-  labels:
-    {{- include "web.labels" . | nindent 4 }}
 spec:
-  type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
+    - protocol: TCP
+      port: {{ .Values.service.port }}
+      targetPort: 80
   selector:
-    {{- include "web.selectorLabels" . | nindent 4 }}
+    app: {{ include "web.name" . }}
