--- a/orocommerce/charts/backend/templates/hpa.yaml
+++ b/orocommerce/charts/backend/templates/hpa.yaml
@@ -3,6 +3,7 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ include "backend.fullname" . }}
+  namespace: {{ .Values.global.namespace | default "orocommerce" }}
   labels:
     {{- include "backend.labels" . | nindent 4 }}
 spec:
