--- a/orocommerce/charts/database/templates/service.yaml
+++ b/orocommerce/charts/database/templates/service.yaml
@@ -2,14 +2,15 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "database.fullname" . }}
+  namespace: {{ .Values.global.namespace | default "orocommerce" }}
   labels:
     {{- include "database.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
+      targetPort: postgresql
       protocol: TCP
-      name: http
+      name: postgresql
   selector:
     {{- include "database.selectorLabels" . | nindent 4 }}
