--- a/orocommerce/charts/database/templates/deployment.yaml
+++ b/orocommerce/charts/database/templates/deployment.yaml
@@ -1,3 +1,5 @@
+{{- if .Values.useDeployment }}
+{{- if .Values.useDeployment }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -76,3 +78,5 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+{{- end }}
+{{- end }}
