--- a/orocommerce/charts/frontend/templates/deployment.yaml
+++ b/orocommerce/charts/frontend/templates/deployment.yaml
@@ -37,7 +37,7 @@ spec:
           protocol: TCP
         livenessProbe:
           httpGet:
-            path: /
+            path: /healthz
             port: http
           initialDelaySeconds: 30
           periodSeconds: 10
@@ -54,6 +54,9 @@ spec:
           mountPath: /var/www/oro
         - name: uploads
           mountPath: /var/www/oro/public/uploads
+        - name: nginx-config
+          mountPath: /etc/nginx/conf.d/default.conf
+          subPath: default.conf
         env:
         - name: BACKEND_HOST
           value: {{ include "backend.serviceName" . }}
@@ -66,3 +69,6 @@ spec:
       - name: uploads
         persistentVolumeClaim:
           claimName: orocommerce-uploads-pvc 
+      - name: nginx-config
+        configMap:
+          name: {{ include "frontend.fullname" . }}-nginx
