--- a/orocommerce/charts/database/templates/service.yaml
+++ b/orocommerce/charts/database/templates/service.yaml
@@ -1,16 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "database.fullname" . }}
-  namespace: {{ .Values.global.namespace | default "orocommerce" }}
+  name: database
   labels:
-    {{- include "database.labels" . | nindent 4 }}
+    app: database
 spec:
-  type: {{ .Values.service.type }}
+  type: ClusterIP
   ports:
     - port: {{ .Values.service.port }}
       targetPort: mysql
       protocol: TCP
       name: mysql
   selector:
-    {{- include "database.selectorLabels" . | nindent 4 }}
+    app: database
