--- a/orocommerce/charts/frontend/templates/deployment.yaml
+++ b/orocommerce/charts/frontend/templates/deployment.yaml
@@ -1,74 +1,24 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "frontend.fullname" . }}
-  namespace: {{ .Values.global.namespace | default "orocommerce" }}
+  name: frontend
   labels:
-    {{- include "frontend.labels" . | nindent 4 }}
+    app: frontend
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      {{- include "frontend.selectorLabels" . | nindent 6 }}
+      app: frontend
   template:
     metadata:
       labels:
-        {{- include "frontend.selectorLabels" . | nindent 8 }}
+        app: frontend
     spec:
-      initContainers:
-      - name: wait-for-backend
-        image: busybox:1.35
-        command: ['sh', '-c']
-        args:
-        - |
-          until nc -z {{ include "backend.serviceName" . }} 9000; do
-            echo "Waiting for backend service..."
-            sleep 5
-          done
-          echo "Backend is ready!"
       containers:
-      - name: nginx
-        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-        imagePullPolicy: {{ .Values.image.pullPolicy }}
-        command: ["nginx", "-g", "daemon off;"]
-        ports:
-        - name: http
-          containerPort: 80
-          protocol: TCP
-        livenessProbe:
-          httpGet:
-            path: /healthz
-            port: http
-          initialDelaySeconds: 30
-          periodSeconds: 10
-        readinessProbe:
-          httpGet:
-            path: /
-            port: http
-          initialDelaySeconds: 5
-          periodSeconds: 5
-        resources:
-          {{- toYaml .Values.resources | nindent 10 }}
-        volumeMounts:
-        - name: orocommerce-app
-          mountPath: /var/www/oro
-        - name: uploads
-          mountPath: /var/www/oro/public/uploads
-        - name: nginx-config
-          mountPath: /etc/nginx/conf.d/default.conf
-          subPath: default.conf
-        env:
-        - name: BACKEND_HOST
-          value: {{ include "backend.serviceName" . }}
-        - name: BACKEND_PORT
-          value: "9000"
-      volumes:
-      - name: orocommerce-app
-        persistentVolumeClaim:
-          claimName: orocommerce-app-pvc
-      - name: uploads
-        persistentVolumeClaim:
-          claimName: orocommerce-uploads-pvc 
-      - name: nginx-config
-        configMap:
-          name: {{ include "frontend.fullname" . }}-nginx
+        - name: nginx
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          ports:
+            - name: http
+              containerPort: 80
+              protocol: TCP
