--- a/orocommerce/charts/frontend/templates/service.yaml
+++ b/orocommerce/charts/frontend/templates/service.yaml
@@ -1,16 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "frontend.fullname" . }}
-  namespace: {{ .Values.global.namespace | default "orocommerce" }}
+  name: frontend
   labels:
-    {{- include "frontend.labels" . | nindent 4 }}
+    app: frontend
 spec:
-  type: {{ .Values.service.type }}
+  type: ClusterIP
   ports:
     - port: {{ .Values.service.port }}
       targetPort: http
       protocol: TCP
       name: http
   selector:
-    {{- include "frontend.selectorLabels" . | nindent 4 }} 
+    app: frontend
