--- a/orocommerce/charts/search/templates/service.yaml
+++ b/orocommerce/charts/search/templates/service.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "search.fullname" . }}
+  name: search
   labels:
-    {{- include "search.labels" . | nindent 4 }}
+    app: search
 spec:
-  type: {{ .Values.service.type }}
+  type: ClusterIP
   ports:
     - port: {{ .Values.service.port }}
       targetPort: http
       protocol: TCP
       name: http
   selector:
-    {{- include "search.selectorLabels" . | nindent 4 }}
+    app: search
