--- a/orocommerce/charts/backend/templates/deployment.yaml
+++ b/orocommerce/charts/backend/templates/deployment.yaml
@@ -2,23 +2,65 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend
-  labels:
-    app: backend
+  labels: { app: backend }
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
-    matchLabels:
-      app: backend
+    matchLabels: { app: backend }
   template:
     metadata:
-      labels:
-        app: backend
+      labels: { app: backend }
     spec:
+      securityContext:
+        runAsUser: {{ .Values.podSecurityContext.runAsUser }}
+        runAsGroup: {{ .Values.podSecurityContext.runAsGroup }}
+        fsGroup: {{ .Values.podSecurityContext.fsGroup }}
+
+      # on rend /opt/oro-nginx writable pour le pid
+      initContainers:
+        - name: fix-perms
+          image: busybox:1.36
+          command:
+            - sh
+            - -c
+            - |
+              set -e
+              mkdir -p /opt/oro-nginx/var \
+              && chown -R 33:33 /opt/oro-nginx \
+              && chmod -R 775 /opt/oro-nginx
+          securityContext:
+            runAsUser: 0
+          volumeMounts:
+            - name: oronginx
+              mountPath: /opt/oro-nginx
+
       containers:
         - name: php-fpm
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          command: ["php-fpm"]        # indispensable
           ports:
             - name: php-fpm
               containerPort: 9000
               protocol: TCP
+          env:
+{{- toYaml .Values.env | nindent 12 }}
+          readinessProbe:
+            tcpSocket: { port: 9000 }
+            initialDelaySeconds: 5
+            periodSeconds: 5
+          livenessProbe:
+            tcpSocket: { port: 9000 }
+            initialDelaySeconds: 20
+            periodSeconds: 10
+          volumeMounts:
+            - name: oronginx
+              mountPath: /opt/oro-nginx
+            - name: tmp
+              mountPath: /tmp
+
+      volumes:
+        - name: oronginx
+          emptyDir: {}
+        - name: tmp
+          emptyDir: {}
